--- a/packages/kogito-jobs-service-webapp/src/index.html
+++ b/packages/kogito-jobs-service-webapp/src/index.html
@@ -22,16 +22,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jobs Service Webapp</title>
+    <title>${KOGITO_JOBS_SERVICE_WEBAPP_TITLE}</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.svg" />
+    <link rel="shortcut icon" type="image/x-icon" href="${KOGITO_JOBS_SERVICE_WEBAPP_LOGO}" />
   </head>
   <body>
     <div class="maindiv">
       <div class="container">
         <div class="logo" style="display: flex; justify-content: center">
-          <img src="favicon.svg" alt="KIE Logo" />
-          <h1>Jobs Service</h1>
+          <img src="${KOGITO_JOBS_SERVICE_WEBAPP_LOGO}" alt="KIE Logo" />
+          <h1>${KOGITO_JOBS_SERVICE_WEBAPP_TITLE}</h1>
         </div>
         <div>
           <h4>Your Jobs service is up and working!</h4>
@@ -43,19 +43,13 @@
         </p>
         <div class="linkbutton">
           <div>
-            <a
-              href="https://kiegroup.github.io/kogito-docs/serverlessworkflow/latest/job-services/core-concepts.html"
-              class="btn"
-              target="_blank"
-              >SonataFlow Jobs Service docs</a
+            <a href="${SONATAFLOW_JOBS_SERVICE_WEBAPP_DOCLINK_HREF}" class="btn" target="_blank"
+              >${SONATAFLOW_JOBS_SERVICE_WEBAPP_DOCLINK_TEXT}</a
             >
           </div>
           <div>
-            <a
-              href="https://docs.kogito.kie.org/latest/html_single/#con-jobs-service_kogito-configuring"
-              class="btn"
-              target="_blank"
-              >Kogito Jobs Service docs</a
+            <a href="${KOGITO_JOBS_SERVICE_WEBAPP_DOCLINK_HREF}" class="btn" target="_blank"
+              >${KOGITO_JOBS_SERVICE_WEBAPP_DOCLINK_TEXT}</a
             >
           </div>
         </div>
