Resolved suggested changes

--- a/packages/sonataflow-workflow-endpoints-webapp/src/index.html
+++ b/packages/sonataflow-workflow-endpoints-webapp/src/index.html
@@ -22,16 +22,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>${WORKFLOW_ENDPOINTS_WEBAPP_TITLE}</title>
+    <title><%= WORKFLOW_ENDPOINTS_WEBAPP_TITLE %></title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="${WORKFLOW_ENDPOINTS_WEBAPP_LOGO}" />
+    <link rel="shortcut icon" type="image/x-icon" href="<%= WORKFLOW_ENDPOINTS_WEBAPP_LOGO %>" />
   </head>
   <body>
     <div class="maindiv">
       <div class="container">
         <div class="logo" style="display: flex; justify-content: center">
-          <img src="${WORKFLOW_ENDPOINTS_WEBAPP_LOGO}" alt="KIE Logo" />
-          <h1>${WORKFLOW_ENDPOINTS_WEBAPP_TITLE}</h1>
+          <img src="<%= WORKFLOW_ENDPOINTS_WEBAPP_LOGO %>" alt="KIE Logo" />
+          <h1><%= WORKFLOW_ENDPOINTS_WEBAPP_TITLE %></h1>
         </div>
         <div>
           <h4>Workflow Endpoints service is up and working!</h4>
@@ -41,8 +41,8 @@
           the services and events orchestration and choreography.
         </p>
         <div>
-          <a href="${WORKFLOW_ENDPOINTS_WEBAPP_DOCLINK_HREF}" class="btn" target="_blank"
-            >${WORKFLOW_ENDPOINTS_WEBAPP_DOCLINK_TEXT}</a
+          <a href="<%= WORKFLOW_ENDPOINTS_WEBAPP_DOCLINK_HREF %>" class="btn" target="_blank"
+            ><%= WORKFLOW_ENDPOINTS_WEBAPP_DOCLINK_TEXT %></a
           >
         </div>
       </div>
