Renaming endpoint->endpoints and WORKFLOWS->SONATAFLOW_WORKFLOW

--- a/packages/sonataflow-workflow-endpoints-webapp/src/index.html
+++ b/packages/sonataflow-workflow-endpoints-webapp/src/index.html
@@ -22,27 +22,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= WORKFLOW_ENDPOINTS_WEBAPP_TITLE %></title>
+    <title><%= SONATAFLOW_WORKFLOW_ENDPOINT_WEBAPP_TITLE %></title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="<%= WORKFLOW_ENDPOINTS_WEBAPP_LOGO %>" />
+    <link rel="shortcut icon" type="image/x-icon" href="<%= SONATAFLOW_WORKFLOW_ENDPOINT_WEBAPP_LOGO %>" />
   </head>
   <body>
     <div class="maindiv">
       <div class="container">
         <div class="logo" style="display: flex; justify-content: center">
-          <img src="<%= WORKFLOW_ENDPOINTS_WEBAPP_LOGO %>" alt="KIE Logo" />
-          <h1><%= WORKFLOW_ENDPOINTS_WEBAPP_TITLE %></h1>
+          <img src="<%= SONATAFLOW_WORKFLOW_ENDPOINT_WEBAPP_LOGO %>" alt="KIE Logo" />
+          <h1><%= SONATAFLOW_WORKFLOW_ENDPOINT_WEBAPP_TITLE %></h1>
         </div>
         <div>
-          <h4>Workflow Endpoints service is up and working!</h4>
+          <h4>SonataFlow Workflow Endpoint service is up and working!</h4>
         </div>
         <p>
           A workflow definition is a JSON or YAML file that conforms to the Serverless Workflow specification DSL to do
           the services and events orchestration and choreography.
         </p>
         <div>
-          <a href="<%= WORKFLOW_ENDPOINTS_WEBAPP_DOCLINK_HREF %>" class="btn" target="_blank"
-            ><%= WORKFLOW_ENDPOINTS_WEBAPP_DOCLINK_TEXT %></a
+          <a href="<%= SONATAFLOW_WORKFLOW_ENDPOINT_WEBAPP_DOCLINK_HREF %>" class="btn" target="_blank"
+            ><%= SONATAFLOW_WORKFLOW_ENDPOINT_WEBAPP_DOCLINK_TEXT %></a
           >
         </div>
       </div>
