--- a/packages/kogito-data-index-webapp/src/index.html
+++ b/packages/kogito-data-index-webapp/src/index.html
@@ -22,16 +22,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>${KOGITO_DATA_INDEX_WEBAPP_TITLE}</title>
+    <title><%= KOGITO_DATA_INDEX_WEBAPP_TITLE %></title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" type="image/x-icon" href="${KOGITO_DATA_INDEX_WEBAPP_LOGO}" />
   </head>
   <body>
     <div class="maindiv">
       <div class="container">
-        <div class="logo" style="display: flex; justify-content: center">
-          <img src="${KOGITO_DATA_INDEX_WEBAPP_LOGO}" alt="KIE Logo" />
-          <h1>${KOGITO_DATA_INDEX_WEBAPP_TITLE}</h1>
+        <div class="logo" style="display: flex; justify-content: center; align-items: center">
+          <img src="<%= KOGITO_DATA_INDEX_WEBAPP_LOGO %>" alt="KIE Logo" />
+
+          <div style="display: flex; flex-direction: column; gap: 4px">
+            <h1 style="margin: 0"><%= KOGITO_DATA_INDEX_WEBAPP_TITLE %></h1>
+            <h6 style="margin: 0; font-weight: normal"><%= KOGITO_DATA_INDEX_WEBAPP_VERSION %></h6>
+          </div>
         </div>
         <div>
           <h4>Your Data Index service is up and working!</h4>
@@ -42,9 +46,10 @@
           modify that data.
         </p>
         <div>
-          <a href="${KOGITO_DATA_INDEX_WEBAPP_DOCLINK_HREF}" class="btn" target="_blank"
-            >${KOGITO_DATA_INDEX_WEBAPP_DOCLINK_TEXT}</a
+          <a href="<%= KOGITO_DATA_INDEX_WEBAPP_DOCLINK_HREF %>" class="btn" target="_blank"
+            ><%= KOGITO_DATA_INDEX_WEBAPP_DOCLINK_TEXT %></a
           >
+          <a href="http://0.0.0.0:8080/q/graphql-ui" class="btn" target="_blank">GraphQL UI</a>
         </div>
       </div>
     </div>
