--- a/packages/kogito-jobs-service-webapp/src/index.html
+++ b/packages/kogito-jobs-service-webapp/src/index.html
@@ -22,16 +22,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>${KOGITO_JOBS_SERVICE_WEBAPP_TITLE}</title>
+    <title><%= KOGITO_JOBS_SERVICE_WEBAPP_TITLE %></title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="${KOGITO_JOBS_SERVICE_WEBAPP_LOGO}" />
+    <link rel="shortcut icon" type="image/x-icon" href="<%= KOGITO_JOBS_SERVICE_WEBAPP_LOGO %>" />
   </head>
   <body>
     <div class="maindiv">
       <div class="container">
-        <div class="logo" style="display: flex; justify-content: center">
-          <img src="${KOGITO_JOBS_SERVICE_WEBAPP_LOGO}" alt="KIE Logo" />
-          <h1>${KOGITO_JOBS_SERVICE_WEBAPP_TITLE}</h1>
+        <div class="logo" style="display: flex; justify-content: center; align-items: center">
+          <img src="<%= KOGITO_JOBS_SERVICE_WEBAPP_LOGO %>" alt="KIE Logo" />
+
+          <div style="display: flex; flex-direction: column; gap: 4px">
+            <h1 style="margin: 0"><%= KOGITO_JOBS_SERVICE_WEBAPP_TITLE %></h1>
+            <h6 style="margin: 0; font-weight: normal" class="versionInfo">
+              <%= KOGITO_JOBS_SERVICE_WEBAPP_VERSION %>
+            </h6>
+          </div>
         </div>
         <div>
           <h4>Your Jobs service is up and working!</h4>
@@ -43,13 +49,13 @@
         </p>
         <div class="linkbutton">
           <div>
-            <a href="${SONATAFLOW_JOBS_SERVICE_WEBAPP_DOCLINK_HREF}" class="btn" target="_blank"
-              >${SONATAFLOW_JOBS_SERVICE_WEBAPP_DOCLINK_TEXT}</a
+            <a href="<%= SONATAFLOW_JOBS_SERVICE_WEBAPP_DOCLINK_HREF %>" class="btn" target="_blank"
+              ><%= SONATAFLOW_JOBS_SERVICE_WEBAPP_DOCLINK_TEXT %></a
             >
           </div>
           <div>
-            <a href="${KOGITO_JOBS_SERVICE_WEBAPP_DOCLINK_HREF}" class="btn" target="_blank"
-              >${KOGITO_JOBS_SERVICE_WEBAPP_DOCLINK_TEXT}</a
+            <a href="<%= KOGITO_JOBS_SERVICE_WEBAPP_DOCLINK_HREF %>" class="btn" target="_blank"
+              ><%= KOGITO_JOBS_SERVICE_WEBAPP_DOCLINK_TEXT %></a
             >
           </div>
         </div>
