--- a/packages/kogito-data-index-webapp/src/index.html
+++ b/packages/kogito-data-index-webapp/src/index.html
@@ -24,7 +24,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= KOGITO_DATA_INDEX_WEBAPP_TITLE %></title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="${KOGITO_DATA_INDEX_WEBAPP_LOGO}" />
+    <link rel="shortcut icon" type="image/x-icon" href="<%= KOGITO_DATA_INDEX_WEBAPP_LOGO %>" />
   </head>
   <body>
     <div class="maindiv">
